[home_work_2] add logic network connect, api, show movies from server

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlinx-serialization'
 apply from: "../ktlint.gradle"
 
 
@@ -25,10 +25,12 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
+            buildConfigField "String", "BASE_URL", "\"https://api.themoviedb.org/3/\""
         }
         release {
             testCoverageEnabled true
             minifyEnabled false
+            buildConfigField "String", "BASE_URL", "\"https://api.themoviedb.org/3/\""
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -86,4 +88,14 @@ dependencies {
     implementation "com.github.lisawray.groupie:groupie-viewbinding:$rootProject.groupieVersion"
 
     implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    //Serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0"
+
 }
