--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlinVersion = '1.9.21'
+
     repositories {
         google()
         mavenCentral()
@@ -10,10 +10,14 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jacoco:org.jacoco.core:0.8.11"
+        classpath("org.jetbrains.kotlin:kotlin-serialization:2.0.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 
+}
+plugins {
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.0' apply false
 }
 
 allprojects {
