--- a/build.gradle
+++ b/build.gradle
@@ -64,4 +64,8 @@ ext {
     loggingInterceptor = '4.9.1'
     kotlinxSerializationJson = '1.6.3'
     kotlinxSerializationConverter = '1.0.0'
+
+    rxandroid = '2.1.1'
+    rxjava = '2.2.16'
+    adapterRxjava2 = '2.3.0'
 }
