--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,8 @@ dependencies {
     implementation "androidx.room:room-rxjava2:$rootProject.roomVersion"
     testImplementation "androidx.room:room-testing:$rootProject.roomVersion"
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+
+    //MVI Roxy
+    implementation "com.ww:roxie:$rootProject.roxyVersion"
+
 }
