--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ android {
 }
 
 dependencies {
+    implementation project(':core:network')
+    implementation project(':core:storage')
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "androidx.appcompat:appcompat:$supportLibVersion"
