--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,8 @@ dependencyResolutionManagement {
     }
 }
 
-include ':app'
 rootProject.name='IntensivStart'
+include ':app'
+include ':core'
+include ':core:network'
+include ':core:storage'
