--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ android {
     }
     buildTypes {
         debug {
-            testCoverageEnabled true
+//            testCoverageEnabled true
+            minifyEnabled false
         }
         release {
             testCoverageEnabled true
@@ -70,10 +71,31 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
 
-    // Testing
-    testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test:runner:$runnerVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+    // Dependencies for Android instrumented unit tests
+    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "org.mockito:mockito-core:3.2.4"
+    androidTestImplementation "android.arch.persistence.room:testing:2.2.5"
+//    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+//    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Dependencies for local unit tests
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.13"
+    testImplementation 'io.mockk:mockk:1.13.4'
+    testImplementation "org.mockito:mockito-core:3.4.6"
+    testImplementation 'org.mockito:mockito-inline:2.8.47'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test:core-ktx:1.3.0"
+    testImplementation "androidx.test.ext:junit:1.1.2"
+
+    // AndroidX Test - Instrumented testing
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
