--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ plugins {
     id("org.jetbrains.kotlin.plugin.serialization") version '2.0.0' apply false
     id("org.jetbrains.kotlin.jvm") version "1.9.24" apply false
     id("androidx.room") version "2.7.0-alpha02" apply false
+    id("com.google.firebase.crashlytics") version "3.0.2" apply false
 }
 
 task clean(type: Delete) {
