--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.9.20'
+    ext.kotlinVersion = '1.9.21'
 
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath 'com.android.tools.build:gradle:8.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jacoco:org.jacoco.core:0.8.11"
         classpath("org.jetbrains.kotlin:kotlin-serialization:2.0.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-
 }
 
 plugins {
@@ -26,6 +25,12 @@ plugins {
     id("org.jetbrains.kotlin.jvm") version "1.9.24" apply false
     id("androidx.room") version "2.7.0-alpha02" apply false
     id("com.google.firebase.crashlytics") version "3.0.2" apply false
+}
+
+subprojects {
+    afterEvaluate { project ->
+        project.apply from: '../jacoco.gradle'
+    }
 }
 
 task clean(type: Delete) {
