--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ captures/
 
 # IntelliJ
 *.iml
+.gradle
+/local.properties
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -49,12 +51,15 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
-
+.DS_Store
+/build
+/captures
+.externalNativeBuild
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 *.jks
 *.keystore
-
+/keystore
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 .cxx/
